# hexagonal-architecture-example-rs

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  docker-compose.yml  readme.md
crates/passport/: Cargo.toml
crates/passport/src/: composable.rs  lib.rs
crates/passport/src/adapters/repository/: mod.rs  user.rs
crates/passport/src/adapters/repository/types/: user.rs
crates/passport/src/adapters/rest/handlers/: auth.rs
crates/passport/src/adapters/rest/routers/: auth.rs
crates/passport/src/adapters/rest/types/: mod.rs
crates/people/: Cargo.toml
crates/people/src/: composable.rs
crates/people/src/adapters/repository/: mod.rs  person.rs  person_document_type.rs  person_gender.rs
crates/people/src/adapters/repository/types/: person.rs  person_gender.rs
crates/people/src/adapters/rest/handlers/: person.rs  person_gender.rs
crates/people/src/adapters/rest/routers/: person.rs  person_gender.rs
crates/people/src/adapters/rest/types/: mod.rs  person.rs  person_gender.rs
crates/people/src/domain/: mod.rs
crates/people/src/domain/changes/: mod.rs  person_gender.rs
crates/people/src/domain/commands/: person.rs  person_gender.rs
crates/people/src/domain/entities/: person.rs
crates/people/src/domain/ports/api/: mod.rs  person.rs  person_document_type.rs  person_gender.rs
crates/people/src/domain/ports/spi/: person.rs  person_document_type.rs  person_gender.rs
crates/people/src/domain/queries/: mod.rs  person_document_type.rs  person_gender.rs
crates/people/src/domain/selectors/: person.rs  person_document_type.rs  person_gender.rs
crates/people/src/domain/services/: person.rs  person_document_type.rs  person_gender.rs
crates/people/src/domain/valuables/: person.rs  person_gender.rs
crates/warehouses/: Cargo.toml
crates/warehouses/src/: lib.rs
crates/warehouses/src/adapters/: mod.rs
crates/warehouses/src/adapters/repository/: family.rs  mod.rs  product.rs
crates/warehouses/src/adapters/repository/factories/: family.rs  mod.rs  product.rs
crates/warehouses/src/adapters/rest/: mod.rs
crates/warehouses/src/adapters/rest/handlers/: product.rs
crates/warehouses/src/adapters/rest/routers/: product.rs
crates/warehouses/src/adapters/rest/types/: product.rs
crates/warehouses/src/composable/: warehouse.rs
crates/warehouses/src/domain/: mod.rs
crates/warehouses/src/domain/changes/: product.rs
crates/warehouses/src/domain/commands/: product.rs
crates/warehouses/src/domain/ports/api/: product.rs
crates/warehouses/src/domain/ports/spi/: family.rs  mod.rs  product.rs
crates/warehouses/src/domain/selectors/: family.rs  product.rs
crates/warehouses/src/domain/services/: product.rs
crates/warehouses/src/domain/valuables/: product.rs
portal_migration/: Cargo.toml
portal_migration/src/: lib.rs  m20200118_120326_create_user_table.rs  m20240207_120014_create_person_gender_table.rs  m20240207_211848_create_person_document_type_table.rs  m20240207_211901_create_person_table.rs  m20241025_093336_create_product_family_table.rs  m20241025_094129_create_product_table.rs  main.rs
portal_schema/: Cargo.toml
portal_schema/src/: lib.rs  person.rs  person_document_type.rs  person_gender.rs  prelude.rs  product.rs  product_family.rs  user.rs
src/: lib.rs  main.rs
tests/: integration_test.rs
tests/common/: mod.rs
tests/passport/: common.rs
tests/passport/auth/: authenticate.rs  mod.rs
tests/people/: common.rs  mod.rs
tests/people/person/: create.rs  detail.rs  find_all.rs  mod.rs  update.rs
tests/people/person_gender/: create.rs  update.rs
tests/products/: common.rs
tests/products/product/: create.rs
