[package]
name = "portal_service_rs"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[workspace]
members = [
    "crates/passport",
    "crates/people",
    "crates/warehouses",
    "portal_migration",
    "portal_schema",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
lumx_core = { workspace = true }
lumx_axum = { workspace = true }
lumx_sea_orm = { workspace = true }
ids_std_rest_testing = { workspace = true }
people = { workspace = true }
warehouses = { workspace = true }
passport = { workspace = true }
serde = { workspace = true }

[workspace.dependencies]
validator = { version = "0.18", features = ["derive"] }
tracing = "0.1"
async-trait = "0.1.83"
serde = { version = "1.0.215", features = ["derive"] }
sea-orm = { version = "1.1" }
bcrypt = "0.16"
jsonwebtoken = { version = "9.3" }
lazy_static = { version = "1.5" }
serde_json = "1.0.128"
pretty_assertions = "1.4.1"
tower = { version = "0.5.2", features = ["util"] }
ids_std_domain = { git = "https://github.com/iDesoftSystems/ids-std.git", branch = "main" }
ids_std_utils = { git = "https://github.com/iDesoftSystems/ids-std.git", branch = "main" }
ids_std_rest_api = { git = "https://github.com/iDesoftSystems/ids-std.git", branch = "main" }
ids_std_sea = { git = "https://github.com/iDesoftSystems/ids-std.git", branch = "main" }
ids_std_rest_testing = { git = "https://github.com/iDesoftSystems/ids-std.git", branch = "main" }
lumx_core = { git = "https://github.com/iDesoftSystems/lumx.git", branch = "main" }
lumx_passport = { git = "https://github.com/iDesoftSystems/lumx.git", branch = "main" }
lumx_axum = { git = "https://github.com/iDesoftSystems/lumx.git", branch = "main" }
lumx_axum_test = { git = "https://github.com/iDesoftSystems/lumx.git", branch = "main" }
lumx_sea_orm = { git = "https://github.com/iDesoftSystems/lumx.git", branch = "main", features = [
    "mysql",
    "sqlite",
] }
passport_jwt = { git = "https://github.com/iDesoftSystems/passport.git", branch = "main" }
passport_core = { git = "https://github.com/iDesoftSystems/passport.git", branch = "main" }
passport_auth = { git = "https://github.com/iDesoftSystems/passport.git", branch = "main" }
portal_schema = { path = "./portal_schema" }
portal_migration = { path = "./portal_migration" }
passport = { path = "./crates/passport" }
people = { path = "./crates/people" }
warehouses = { path = "./crates/warehouses" }

[dev-dependencies]
tower = { workspace = true }
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
bcrypt = { workspace = true }
serde = { workspace = true }
passport_jwt = { workspace = true }
passport_core = { workspace = true }
lumx_axum_test = { workspace = true }
portal_schema = { workspace = true }
portal_migration = { workspace = true }