[package]
name = "people"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
async-trait = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }
serde = { workspace = true }
lumx_core = { workspace = true }
lumx_axum = { workspace = true }
lumx_sea_orm = { workspace = true }
ids_std_domain = { workspace = true }
ids_std_utils = { workspace = true }
ids_std_rest_api = { workspace = true }
ids_std_sea = { workspace = true }
portal_schema = { workspace = true }
passport_core = { workspace = true }
lumx_passport = { workspace = true }
